--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,9 @@
-spring.application.name=ciemmedicjad
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/ciemmedicjad
+spring.datasource.url=jdbc:postgresql://localhost:5432/databaseCiem
 spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=toor
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
+
+server.port=8081
