--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,8 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -62,11 +64,14 @@
 			<scope>runtime</scope>
 		</dependency>
 		<!-- vert.x add on spring boot -->
+		
 		<dependency>
 			<groupId>io.vertx</groupId>
-			<artifactId>vertx-core</artifactId>
+			<artifactId>vertx-Core</artifactId>
 			<version>4.3.3</version>
 		</dependency>
+		
+		
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
@@ -85,6 +90,11 @@
 			<optional>true</optional>
 		</dependency>
 	
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc8</artifactId>
+			<version>19.3.0.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -118,6 +128,17 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+	
+		
+        	<plugin>
+            	<groupId>org.apache.maven.plugins</groupId>
+            	<artifactId>maven-compiler-plugin</artifactId>
+            	<version>3.11.0</version>
+            	<configuration>
+                	<source>17</source>
+                	<target>17</target>
+            	</configuration>
 			</plugin>
 		</plugins>
 	</build>
