--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.jpa.hibernate.ddl-auto=update
 
 
 server.port=8081
+
+
+
+vertx:
+    cluster: 
+        enable: true
+    event-loop-pool:
+        size:5
