--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 # application.properties
 spring.main.allow-bean-definition-overriding=true
-
+# application.properties
+#logging.level.root=DEBUG
 server.port=8081
 
 
