--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,8 @@
 			<version>3.6.0</version>
 		</dependency>
 		-->
+
+
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
@@ -65,6 +67,10 @@
 		</dependency>
 		<!-- vert.x add on spring boot -->
 		
+
+		<!-- JSON -->
+
+
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-Core</artifactId>
@@ -83,6 +89,12 @@
 			<version>2.1.3</version>
 		</dependency>
 	
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.15.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
