--- a/pom.xml
+++ b/pom.xml
@@ -68,8 +68,19 @@
 		<!-- vert.x add on spring boot -->
 		
 
-		<!-- JSON -->
 
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.8</version>
+		</dependency>
+
+		<!-- JSON -->
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+    		<version>2.12.3</version>
+		</dependency>
 
 		<dependency>
 			<groupId>io.vertx</groupId>
